# AnycubicNFCTaggerQT5

./: AnycubicNFCTaggerQT5.code-workspace  AnycubicNFCTaggerQT5.py  CHANGELOG.md  MANIFEST.in  README.md  README_V0.3.0.md  build_dmg.sh  build_exe.bat  freeze_setup.py  freeze_setup2.py  install.sh  pyproject.toml  settings.py
doc/: AnycubicNFCTaggerQT5_Build_Instructions.md  BUILDING-BINARIES_DE.md  INSTALLATION.md  INSTALLATION_DE.md  PACKAGING_SIGNING.md  PAGE_EDITOR_DOCK.md  USER_GUIDE.md  USER_GUIDE_DE.md  build_binary_code.md  developer_notes.md  nfc_tag_research.md
packaging/macos/: dmg_settings.py
src/AnycubicNFCTaggerQT5.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/anycubic_nfc_qt5/: app.py  constants.py
src/anycubic_nfc_qt5/config/: ac_filaments.ini  filaments.py  ini_utils.py
src/anycubic_nfc_qt5/nfc/: backend.py  pcsc.py  presence.py
src/anycubic_nfc_qt5/ui/: main_window.py  nfc_fields.py  prefill.py
src/anycubic_nfc_qt5/ui/docks/: __init__.py  page_editor_dock.py
src/anycubic_nfc_qt5/ui/widgets/: __init__.py  color_dot.py
src/anycubic_nfc_qt5/utils/: colors.py  placeholders.py  sku.py
tests/: demo1.py  ntag_dump.py  test_anycubic_parse.py  test_ndef_probe.py  test_nfc_probe.py  test_smoke.py
