[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AnycubicNFCTaggerQT5"
version = "0.3.0"
description = "PyQt5 GUI for Anycubic NFC filament tagging"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"              # oder "Apache-2.0", etc.
license-files = ["LICENSE*"] # optional
authors = [{ name = "LunaX" }]

dependencies = [
  "PyQt5>=5.15,<6",
  "pyscard>=2.0",
]

[project.urls]
Homepage = "https://github.com/mrRobot62/AnycubicNFCTaggerQT5"
Source = "https://github.com/mrRobot62/AnycubicNFCTaggerQT5.git"

# GUI-Entry (keine Konsole auf Windows)
[project.gui-scripts]
AnycubicNFCTaggerQT5 = "anycubic_nfc_qt5.app:run_app"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# Paketdaten: INI + PNG-Icons
[tool.setuptools.package-data]
anycubic_nfc_qt5 = [
  "config/ac_filaments.ini",
  "ui/resources/nfc_black.png",
  "ui/resources/nfc_green.png",
  "ui/resources/nfc_red.png",
]